--- a/media-gallery-android/src/main/res/layout/activity_gallery.xml
+++ b/media-gallery-android/src/main/res/layout/activity_gallery.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <FrameLayout
+        android:id="@+id/gallery_transition_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <View
-            android:id="@+id/gallery_transition_view"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:background="?attr/colorPrimary"
-            tools:ignore="UnusedAttribute" />
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
